--- a/quillen.tex
+++ b/quillen.tex
@@ -64,7 +64,7 @@ Harkening back to \Cref{FirstAppearanceOfInternalAut}, the definition of the $R$
 There is an affine scheme $T_x X$ defined by \[(T_x X)(T) := \left\{ (u, f) \middle| \begin{array}{c} u\co \Spec T \to S, \\ f \in T_{u^* x} u^* X \end{array} \right\}.\]
 \end{lemma}
 \begin{proof}[Proof sketch]
-We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} to the case at hand.\footnote{Strickland also shows that mapping schemes between formal schemes exist considerably more generally~\cite[Theorem 4.69]{StricklandFSFG}.  The source either has to be ``finite'' in some sense, in which case the proof proceeds along the lines presented here, or it has to be \textit{coalgebraic}, which is an important technical tool that we discuss much later in \Cref{DefnCoalgebraicFormalScheme}.}  We start by seeking an $R$--algebra $B$ such that $R$--algebra maps $B \to T$ biject with pairs of maps $u\co R \to T$ and $T$--algebra maps \[f\co A \otimes_R T \to R[\eps] / \eps^2 \otimes_R T.\]  Such maps $f$ biject with $R$--algebra maps \[A \to R[\eps] / \eps^2 \otimes_R T.\]  Noting that $R[\eps] / (\eps)^2$ is free and finite--dimensional as an $R$--module, we forget from $R$--algebra maps down to just $R$--module maps, use $R$--linear duality to move it to the domain, promote it back to an $R$--algebra by forming the symmetric algebra, then finally try to pick out the maps of interest by imposing a quotient.  By expanding Strickland's formulas, we arrive at the equation \[\InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) = \Spec \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. .\]  To extract the scheme $T_x X$ from this, we construct the pullback \[T_x X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting $\eps = 0$ and on the right using the point $x$.  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_x X} = A / I^2 \cong R \oplus T^*_x X. \qedhere\]
+We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} to the case at hand.\footnote{Strickland also shows that mapping schemes between formal schemes exist considerably more generally~\cite[Theorem 4.69]{StricklandFSFG}.  The source either has to be ``finite'' in some sense, in which case the proof proceeds along the lines presented here, or it has to be \textit{coalgebraic}, which is an important technical tool that we discuss much later in \Cref{DefnCoalgebraicFormalScheme}.}  We start by seeking an $R$--algebra $B$ such that $R$--algebra maps $B \to T$ biject with pairs of maps $u\co R \to T$ and $T$--algebra maps \[f\co A \otimes_R T \to R[\eps] / \eps^2 \otimes_R T.\]  Such maps $f$ biject with $R$--algebra maps \[A \to R[\eps] / \eps^2 \otimes_R T.\]  Noting that $R[\eps] / (\eps)^2$ is free and finite--dimensional as an $R$--module\todo{Seriously consider just writing out what you mean here in symbols.}, we forget from $R$--algebra maps down to just $R$--module maps, use $R$--linear duality to move it to the domain, promote it back to an $R$--algebra by forming the symmetric algebra, then finally try to pick out the maps of interest by imposing a quotient.  By expanding Strickland's formulas, we arrive at the equation \[\InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) = \Spec \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. .\]  To extract the scheme $T_x X$ from this, we construct the pullback \[T_x X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting $\eps = 0$ and on the right using the point $x$.  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_x X} = A / I^2 \cong R \oplus T^*_x X. \qedhere\]
 \end{proof}
 
 \begin{definition}
@@ -802,6 +802,24 @@ Our goal today is to calculate the effect of our power operation $P^n$ on $MU$--
 The $MU(1)$ calculation.
 
 For whatever reason, we're interested in the tautological bundle $\L$ on $\CP^\infty$, as well as its $n$--fold internal direct sum $\L^{\oplus n}$.  In our discussion yesterday, this gave rise to a bundle $\L(n)$ and an associated $MU$--characteristic class $c_n \L(n)$ according to the diagram \[\CP^\infty_{hC_n} \to (\CP^\infty)^{\times n}_{hC_n} \to \Susp^{2n} MU^{\sm n}_{hC_n} \to \Susp^{2n} MU.\]
+
+
+
+
+See also:
+\begin{center}
+\begin{tikzcd}
+(\CP^\infty)^{\times p} \arrow["c_1^{\sm p}"]{r} \arrow[bend right=40, "\oplus"']{dd} \arrow{d} & E^{\sm p} \arrow[bend left=40]{dd} \arrow{d} \\
+(\CP^\infty)^{\times p}_{hC_p} \arrow{r} \arrow{d} & E^{\sm p}_{hC_p} \arrow{d} \\
+BU(p) \arrow["c_p"]{r} & E.
+\end{tikzcd}
+\end{center}
+The important thing is that the $p${\th} Chern class of a $p$--fold sum of lines is the product of the $1${\st} Chern classes of the lines, so that this diagram commutes.  Then, the $H_\infty$--structure lets you add the map in the middle, explaining why you're really interested in calculating the $p${\th} Chern class of $\L(p)$.
+
+
+
+
+
 
 The bundle $\L^{\oplus n}$ carries a $C_n$--action by permutation of the factors, and it is just as well to say that $\L^{\oplus n} \cong \L \otimes \pi^* \rho$, where $\rho$ is the regular representation of $C_n$ (considered as a vector bundle over a point) and $\pi\co \CP^\infty \to *$ is the constant map.  The regular representation for $C_n$ is accessible by character theory: for $\chi\co U(1)[n] \to U(1)$ the generating character, there is a decomposition $\rho \cong \bigoplus_{j=0}^{n-1} \chi^{\otimes j}$ of the associated vector bundles\todo{I guess I mean to consider $\chi$ as a line bundle with $C_n$--action.  It is just by complex rotation?}, and hence \[\L^{\oplus n} \cong \L \otimes \pi^* \rho \cong \L \otimes \bigoplus_{j=0}^{n-1} \pi^* \chi^{\otimes j} \cong \bigoplus_{j=0}^{n-1} \L \otimes \pi^* \chi^{\otimes j}.\]
 
