--- a/mo.tex
+++ b/mo.tex
@@ -713,7 +713,7 @@ Our goal in this section is to use our results so far to make a calculation of \
 
 Our first step toward this is the following calculation:
 \begin{lemma}[{\cite[Theorem 16.17]{Switzer}}]\label{HF2BOIsSymAlg}
-The natural map \[\widetilde{\HFtwo P}_0(BO(1)) \to \HFtwo P_0(BO).\] induces a map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) = \frac{\Sym \HFtwo P_0(BO(1))}{\beta_0 = 1} \xrightarrow{\simeq} \HFtwo P_0(BO)\] which is an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra.
+The natural map \[\widetilde{\HFtwo P}_0(BO(1)) \to \HFtwo P_0(BO).\] induces a map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) = \frac{\Sym \HFtwo P_0(BO(1))}{\alpha_0 = 1} \xrightarrow{\simeq} \HFtwo P_0(BO)\] which is an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra.
 \end{lemma}
 \begin{proof}
 This follows from several standard facts about \index{Stiefel--Whitney class}Stiefel--Whitney classes.  First, these classes generate the cohomology ring \(\HFtwo P^0 BO(n)\)~\cite[Theorem 16.10]{Switzer}: \[\HFtwo P^0 BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Then, the total Stiefel--Whitney class \(w(V) = \sum_j w_j(V) t^j\) is exponential~\cite[Theorem 16.3]{Switzer}, in the sense that \[w(V \oplus W) = w(V) \cdot w(W).\]  It follows that the natural map \[\HFtwo P^0 BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} \HFtwo P^0 BO(1)^{\times n} \cong (\HFtwo P^0 BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(\HFtwo P_0 BO(1))^{\otimes n} \to \HFtwo P_0 BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as \(n \to \infty\), we recover the statement of the Lemma.
@@ -723,14 +723,14 @@ With this in hand, we now turn to the homotopy ring \(\HFtwo P_0 MO\).  There ar
 \begin{center}
 \begin{tikzcd}[row sep=0.2em]
 \HFtwo P_0(BO(1)) \arrow[equal]{r} & \HFtwo P_0(MO(1)) \\
-\beta_j, j \ge 0 \arrow[|->]{r} & \beta'_j, j \ge 0,
+\alpha_j, j \ge 0 \arrow[|->]{r} & \alpha'_j, j \ge 0,
 \end{tikzcd}
 \end{center}
 and we also have the equivalence induced by the topological map in \Cref{RPnThomExample}:
 \begin{center}
 \begin{tikzcd}[row sep=0.2em]
 \widetilde{\HFtwo P}_0 (BO(1)) \arrow[equal]{r} & \HFtwo P_0 (\Susp MO(1)) \\
-\beta_j, j \ge 1 \arrow[|->]{r} & \beta'_{j-1}, j \ge 1.
+\alpha_j, j \ge 1 \arrow[|->]{r} & \alpha'_{j-1}, j \ge 1.
 \end{tikzcd}
 \end{center}
 We will use them both in turn.
@@ -770,10 +770,10 @@ We extend the square in the \Cref{DetectingMORingMapsInHomotopy} using the follo
 \begin{center}
 \begin{tikzcd}[column sep=1em]
 \CatOf{Modules}_{\F_2}(\HFtwo P_0(MO(1)), \F_2) & \CatOf{Modules}_{\F_2}(\HFtwo P_0(MO), \F_2) \arrow{l} \\
-\left\{f\co \HFtwo P_0(MO(1)) \to \F_2 \middle| f(\beta_0') = 1\right\} \arrow[hookrightarrow]{u} \arrow[equal]{r} & \arrow[hookrightarrow]{u} \CatOf{Algebras}_{\F_2/}(\HFtwo P_0(MO), \F_2),
+\left\{f\co \HFtwo P_0(MO(1)) \to \F_2 \middle| f(\alpha_0') = 1\right\} \arrow[hookrightarrow]{u} \arrow[equal]{r} & \arrow[hookrightarrow]{u} \CatOf{Algebras}_{\F_2/}(\HFtwo P_0(MO), \F_2),
 \end{tikzcd}
 \end{center}
-where the equality at bottom follows from the universal property of \(\HFtwo P_0(MO)\) in \(\F_2\)--algebras expressed in \Cref{HF2MOisFree}.  Noting that \(\beta'_0\) is induced by the topological map \(\S^0 \to MO(1)\), the condition \(f(\beta'_0) = 1\) is exactly the condition expressed in the statement of the Corollary.
+where the equality at bottom follows from the universal property of \(\HFtwo P_0(MO)\) in \(\F_2\)--algebras expressed in \Cref{HF2MOisFree}.  Noting that \(\alpha'_0\) is induced by the topological map \(\S^0 \to MO(1)\), the condition \(f(\alpha'_0) = 1\) is exactly the condition expressed in the statement of the Corollary.
 \end{proof}
 
 \begin{corollary}[{\cite[Definition 12.1, Theorem 12.3]{StricklandFGNotes}}]
@@ -782,7 +782,7 @@ There is an \(\InternalAut(\G_a)\)--equivariant isomorphism of schemes \[\Spec \
 \begin{proof}
 The conclusion of the previous Corollary is that the \(\F_2\)--points of \(\Spec \HFtwo P_0(MO)\) biject with classes in \(\HFtwo P^0 MO(1) \cong \widetilde{\HFtwo P}^0 \RP^\infty\) satisfying the condition that they give an isomorphism \(\RP^\infty_{\HFtwo P} \cong \G_a\).  Because \(\HFtwo P_0(MO)\) is a polynomial algebra, this holds in general: for \(u\co \F_2 \to T\) an \(\F_2\)--algebra, the \(T\)--points of \(\Spec \HFtwo P_0(MO)\) will biject with coordinates on \(u^* \RP^\infty_{\HFtwo P}\).  The isomorphism of schemes follows, though we have not yet discussed equivarience.
 
-To compute the action of \(\InternalAut \G_a\), we turn to the map in \Cref{RPnThomExample}: \[\Susp^\infty BO(1) \xrightarrow{c, \simeq} \Susp MO(1).\]  Writing \(\beta(t) = \sum_{j=0}^\infty \beta_j t^j\) and \(\xi(t) = \sum_{k=0}^\infty \xi_k t^{2^k}\), the dual Steenrod coaction on \(\HFtwo P_0 BO(1)\) is encoded by the formula \[\sum_{j=0}^\infty \psi(\beta_j) t^j = \psi(\beta(t)) = \beta(\xi(t)) = \sum_{j=0}^\infty \beta_j \left(\sum_{k=0}^\infty \xi_k t^{2^k} \right)^j.\]  Because \(c_*(\beta_j) = \beta'_{j-1}\), this translates to the formula \(\psi(\beta'(t)) = \beta'(\xi(t))\), where \[\beta'(t) = \sum_{j=0}^\infty \beta'_j t^{j+1}.\]  Passing from \(\HFtwo P_0(MO(1))\) to \[\HFtwo P_0(MO) \cong \Sym \HFtwo P_0(MO(1)) / (\beta'_0 = 1),\] we see that this is precisely the formula for precomposing a coordinate with a strict automorphism.  This is exactly the assertion that a point in \(\Aut_1(\G_a)\) acts on a point in \(\Coord(\RP^\infty_{\HFtwo P})\) in the way claimed.
+To compute the action of \(\InternalAut \G_a\), we turn to the map in \Cref{RPnThomExample}: \[\Susp^\infty BO(1) \xrightarrow{c, \simeq} \Susp MO(1).\]  Writing \(\alpha(t) = \sum_{j=0}^\infty \alpha_j t^j\) and \(\xi(t) = \sum_{k=0}^\infty \xi_k t^{2^k}\), the dual Steenrod coaction on \(\HFtwo P_0 BO(1)\) is encoded by the formula \[\sum_{j=0}^\infty \psi(\alpha_j) t^j = \psi(\alpha(t)) = \alpha(\xi(t)) = \sum_{j=0}^\infty \alpha_j \left(\sum_{k=0}^\infty \xi_k t^{2^k} \right)^j.\]  Because \(c_*(\alpha_j) = \alpha'_{j-1}\), this translates to the formula \(\psi(\alpha'(t)) = \alpha'(\xi(t))\), where \[\alpha'(t) = \sum_{j=0}^\infty \alpha'_j t^{j+1}.\]  Passing from \(\HFtwo P_0(MO(1))\) to \[\HFtwo P_0(MO) \cong \Sym \HFtwo P_0(MO(1)) / (\alpha'_0 = 1),\] we see that this is precisely the formula for precomposing a coordinate with a strict automorphism.  This is exactly the assertion that a point in \(\Aut_1(\G_a)\) acts on a point in \(\Coord(\RP^\infty_{\HFtwo P})\) in the way claimed.
 \end{proof}
 
 We are now ready to analyze the group cohomology of \(\InternalAut(\G_a)\) with coefficients in the comodule \(\HFtwo P_0(MO)\).  This is the last piece of input we need to assess the Adams spectral sequence computing \(\pi_* MO\).
@@ -799,16 +799,16 @@ Because we assumed \(b_0 = 1\) and \(f_{\mathrm{typ}}\) is concentrated in power
 \end{proof}
 
 \begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]\label{CalculationOfPiStarMO}
-\(\pi_* MO = \F_2[b_j \mid j \ne 2^k - 1, j \ge 1]\) with \(|b_j| = j\).
+\(\pi_* MO = \F_2[a_j \mid j \ne 2^k - 1, j \ge 1]\) with \(|a_j| = j\).
 \end{corollary}
 \begin{proof}
-Set \(M = \F_2[b_j \mid j \ne 2^k - 1]\), and write \(\mathcal AP_0'\) for the ring of functions on \(\InternalAut_1(\G_a)\).  It follows from \Cref{CotensorReducesCofreeness} applied to \Cref{CalculationOfAutGaActionOnMO} that the \(\InternalAut_1(\G_a)\)--cohomology of \(\HFtwo P_0(MO)\) has amplitude \(0\):
+Set \(M = \F_2[a_j \mid j \ne 2^k - 1]\), and write \(\mathcal AP_0'\) for the ring of functions on \(\InternalAut_1(\G_a)\).  It follows from \Cref{CotensorReducesCofreeness} applied to \Cref{CalculationOfAutGaActionOnMO} that the \(\InternalAut_1(\G_a)\)--cohomology of \(\HFtwo P_0(MO)\) has amplitude \(0\):
 \begin{align*}
 \Cotor_{\mathcal AP_0'}^{*, *}(\F_2, \HFtwo P_0(MO)) & = \Cotor_{\mathcal AP_0'}^{*, *}(\F_2, \mathcal A_* \otimes_{\F_2} M) \\
 & = \F_2 \cotensor_{\mathcal A_*} (\mathcal A_* \otimes_{\F_2} M) \\
 & = \F_2 \otimes_{\F_2} M = M.
 \end{align*}
-Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the \(0\)--line, it collapses.  We can infer the grading from the residual \(\Gm\)--action: \[f_{\mathrm{rest}}(x) \mapsto \xi_0^{-1} f_{\mathrm{rest}}(\xi_0 x) = \sum_{j \ne 2^k} \xi_0^{j-1} b_{j-1} x^j.\]  We therefore deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
+Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the \(0\)--line, it collapses.  We can infer the grading from the residual \(\Gm\)--action: \[f_{\mathrm{rest}}(x) \mapsto \xi_0^{-1} f_{\mathrm{rest}}(\xi_0 x) = \sum_{j \ne 2^k} \xi_0^{j-1} a_{j-1} x^j.\]  We therefore deduce \[\pi_* MO = \F_2[a_j \mid j \ne 2^k-1]. \qedhere\]
 \end{proof}
 
 This is pretty remarkable: some statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  The connection between these two problems seems fairly miraculous: we needed a small object, \(\RP^\infty\), which controlled the whole story; we needed to be able to compute everything about it; and we needed various other ``generation'' or ``freeness'' results to work out in our favor.  It is not obvious that we will get this lucky twice, should we try to reapply these ideas to other cases.  Nevertheless, trying to push our luck as far as possible is the main thrust of the rest of the book.  We could close this section with this accomplishment, but there are two easy consequences of this calculation that are worth recording before we leave.
